[gd_scene load_steps=2 format=3 uid="uid://ui_pause_0001"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1_pausegd"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_pausegd")
layer = 100
visible = false

[node name="Shade" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.55)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -140.0
offset_right = 220.0
offset_bottom = 140.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
text = "Resume"

[node name="MenuButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
text = "Back to Menu"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
text = "Quit to Menu"


